# obsidian_tools

./: .env  .gitignore  AGENTS.md  Obsidian_tools.code-workspace  README.md  commands.txt  media_tool.command  menu_fzf.sh  obsidian_comment_tool.py  obsidian_media_tool.py  obsidian_synchro.command  project_memo.txt  pyproject.toml  python_memo.txt  start.sh  stop.sh  test_obsidian_comment_tool.py  tmux_command_menu.sh  tmux_memo.txt  verif_memo.txt  zhrc_memo.txt
docs/: Codex_Workspace.md  Optimisation Obsidian médias.md
