[project]
name = "obsidian-tools"
version = "0.1.0"
description = "Outils Python pour analyser et exporter les medias d'un vault Obsidian."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.scripts]
obsidian-media-tool = "obsidian_media_tool:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["obsidian_media_tool"]
